# python_

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
output/: dashboard.html  offers.db  report.xlsx
src/: dashboard.py  db.py  exporter.py  processor.py  scraper.py
